--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.64
-  maximum: 8.14
-  average: 7.32
-  UpdateDay: '2022-05-07T21:30:48.956026'
+  minimum: 6.72
+  maximum: 7.26
+  average: 7.07
+  UpdateDay: '2022-05-08T00:31:58.954318'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 39240
+  Rank: 39342
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,26 +55,26 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.33
-  maximum: 27.05
-  average: 14.48
-  UpdateDay: '2022-05-07T21:30:48.956778'
+  minimum: 7.12
+  maximum: 15.15
+  average: 9.9
+  UpdateDay: '2022-05-08T00:30:24.515649'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 35832
+  Rank: 35933
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  port: 50004
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 50004
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 10.07
-  maximum: 10.6
-  average: 10.41
-  UpdateDay: '2022-05-07T21:32:23.399399'
+  minimum: 9.53
+  maximum: 11.88
+  average: 10.88
+  UpdateDay: '2022-05-08T00:30:24.516760'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 31261
+  Rank: 31362
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -84,12 +84,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 170.7
-  maximum: 193.15
-  average: 181.91
-  UpdateDay: '2022-05-07T21:32:23.998378'
+  minimum: 63.03
+  maximum: 67.95
+  average: 65.87
+  UpdateDay: '2022-05-08T00:31:59.411975'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 26370
+  Rank: 26427
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -99,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 10.99
-  maximum: 39.4
-  average: 23.64
-  UpdateDay: '2022-05-07T21:32:23.447847'
+  minimum: 19.28
+  maximum: 37.86
+  average: 27.34
+  UpdateDay: '2022-05-08T00:31:59.036597'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 24283
+  Rank: 24355
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 22584
+  Rank: 22592
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -127,57 +127,57 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.87
-  maximum: 64.91
-  average: 39.02
-  UpdateDay: '2022-05-07T21:30:49.019172'
+  minimum: 11.83
+  maximum: 48.61
+  average: 34.49
+  UpdateDay: '2022-05-08T00:30:24.579446'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 21483
+  Rank: 21574
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 91.83
-  maximum: 99.95
-  average: 95.99
-  UpdateDay: '2022-05-07T21:32:23.948619'
+  minimum: 80.08
+  maximum: 103.84
+  average: 93.7
+  UpdateDay: '2022-05-08T00:30:29.614996'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 20267
+  Rank: 20318
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 92.44
-  maximum: 99.54
-  average: 94.86
-  UpdateDay: '2022-05-07T21:32:26.172398'
+  minimum: 75.14
+  maximum: 95.16
+  average: 87.33
+  UpdateDay: '2022-05-08T00:32:01.712595'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 18883
+  Rank: 18933
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.23
-  maximum: 45.47
-  average: 40.7
-  UpdateDay: '2022-05-07T21:32:23.504989'
+  minimum: 41.75
+  maximum: 49.85
+  average: 45.51
+  UpdateDay: '2022-05-08T00:30:27.776820'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 15044
+  Rank: 15115
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -187,12 +187,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 47.31
-  maximum: 54.23
-  average: 50.36
-  UpdateDay: '2022-05-07T21:32:26.169511'
+  minimum: 41.62
+  maximum: 49.05
+  average: 46.4
+  UpdateDay: '2022-05-08T00:32:01.716385'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 14395
+  Rank: 14483
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -207,7 +207,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 14258
+  Rank: 14353
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -219,7 +219,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 14088
+  Rank: 14188
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 13596
+  Rank: 13667
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -241,12 +241,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.24
-  maximum: 46.4
-  average: 41.6
-  UpdateDay: '2022-05-07T21:32:23.501393'
+  minimum: 38.48
+  maximum: 43.95
+  average: 40.74
+  UpdateDay: '2022-05-08T00:31:59.073410'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 13214
+  Rank: 13266
 - alterId: 0
   cipher: auto
   http-opts:
@@ -271,7 +271,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 12695
+  Rank: 12733
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -286,7 +286,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 11625
+  Rank: 11682
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -301,22 +301,22 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 10387
+  Rank: 10437
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: 28d98f761aca9d636f44db62544628eb
+  password: 36ebef7d1b1d6205fd0c55f28800e674
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 173.41
-  maximum: 188.35
-  average: 181.74
-  UpdateDay: '2022-05-07T21:32:26.752740'
+  minimum: 171.48
+  maximum: 205.43
+  average: 193.91
+  UpdateDay: '2022-05-08T00:32:02.183992'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 10363
+  Rank: 10402
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -326,12 +326,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.35
-  maximum: 47.31
-  average: 42.1
-  UpdateDay: '2022-05-07T21:32:23.507610'
+  minimum: 39.34
+  maximum: 46.6
+  average: 41.96
+  UpdateDay: '2022-05-08T00:31:59.161072'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 10152
+  Rank: 10180
 proxy-groups:
 - name: PG-default
   type: fallback
