--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.66
-  maximum: 7.28
-  average: 7.01
-  UpdateDay: '2022-05-09T06:32:04.613116'
+  minimum: 7.49
+  maximum: 8.58
+  average: 7.95
+  UpdateDay: '2022-05-09T09:30:30.979883'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 42542
+  Rank: 42638
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,41 +55,41 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.57
-  maximum: 29.9
-  average: 14.92
-  UpdateDay: '2022-05-09T06:30:26.872824'
+  minimum: 7.52
+  maximum: 15.62
+  average: 10.5
+  UpdateDay: '2022-05-09T09:30:30.980177'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 39135
+  Rank: 39236
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 50004
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.58
-  maximum: 21.19
-  average: 13.79
-  UpdateDay: '2022-05-09T06:30:26.869936'
+  minimum: 9.82
+  maximum: 11.05
+  average: 10.55
+  UpdateDay: '2022-05-09T09:32:08.568417'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 34400
+  Rank: 34502
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.53
-  maximum: 60.25
-  average: 59.92
-  UpdateDay: '2022-05-09T06:32:05.232698'
+  minimum: 60.02
+  maximum: 60.43
+  average: 60.17
+  UpdateDay: '2022-05-09T09:30:39.658090'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 28575
+  Rank: 28636
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -99,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 29.23
-  maximum: 40.74
-  average: 36.67
-  UpdateDay: '2022-05-09T06:32:04.917055'
+  minimum: 38.75
+  maximum: 46.31
+  average: 41.74
+  UpdateDay: '2022-05-09T09:32:09.004893'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 27350
+  Rank: 27446
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 24896
+  Rank: 24982
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -127,57 +127,57 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 21.14
-  maximum: 41.03
-  average: 32.04
-  UpdateDay: '2022-05-09T06:30:26.916649'
+  minimum: 13.33
+  maximum: 47.96
+  average: 34.26
+  UpdateDay: '2022-05-09T09:30:31.080048'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 24525
+  Rank: 24616
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 49.64
-  maximum: 55.55
-  average: 52.98
-  UpdateDay: '2022-05-09T06:30:33.735060'
+  minimum: 51.63
+  maximum: 57.39
+  average: 53.85
+  UpdateDay: '2022-05-09T09:32:09.746897'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 22430
+  Rank: 22527
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 107.96
-  maximum: 124.5
-  average: 118.43
-  UpdateDay: '2022-05-09T06:32:06.508620'
+  minimum: 117.77
+  maximum: 3156.46
+  average: 1467.5
+  UpdateDay: '2022-05-09T09:32:14.730448'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 20057
+  Rank: 20072
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.99
-  maximum: 39.04
-  average: 38.42
-  UpdateDay: '2022-05-09T06:32:05.085392'
+  minimum: 38.35
+  maximum: 45.51
+  average: 40.8
+  UpdateDay: '2022-05-09T09:30:34.218396'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 18050
+  Rank: 18134
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -192,7 +192,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 17302
+  Rank: 17397
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -204,22 +204,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 17019
+  Rank: 17114
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 76.21
-  maximum: 89.26
-  average: 83.47
-  UpdateDay: '2022-05-09T06:32:07.477446'
+  minimum: 95.16
+  maximum: 1112.88
+  average: 441.27
+  UpdateDay: '2022-05-09T09:31:34.685762'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 16594
+  Rank: 16633
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,22 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 15705
-- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
-  server: jp-tyo-04-tr.cdn.savoy.click
-  port: 889
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 41.89
-  maximum: 44.38
-  average: 43.1
-  UpdateDay: '2022-05-09T06:32:04.944892'
-  PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 14665
+  Rank: 15756
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -261,7 +246,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 14647
+  Rank: 14742
+- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
+  server: jp-tyo-04-tr.cdn.savoy.click
+  port: 889
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: UiLPqefVfielqkDjEwBV
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 37.36
+  maximum: 46.4
+  average: 40.5
+  UpdateDay: '2022-05-09T09:32:09.336119'
+  PFirstFoundDay: '2022-03-20T12:36:16.101193'
+  Rank: 14718
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,22 +286,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 14055
+  Rank: 14105
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.64
-  maximum: 40.77
-  average: 40.32
-  UpdateDay: '2022-05-09T06:32:05.091960'
+  minimum: 39.4
+  maximum: 51.7
+  average: 46.52
+  UpdateDay: '2022-05-09T09:32:09.628147'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 12328
+  Rank: 12380
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 12167
+  Rank: 12205
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.88
-  maximum: 40.45
-  average: 39.06
-  UpdateDay: '2022-05-09T06:30:30.138260'
+  minimum: 37.73
+  maximum: 1046.67
+  average: 374.47
+  UpdateDay: '2022-05-09T09:32:10.675496'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 12032
+  Rank: 12106
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -353,8 +353,8 @@ proxy-groups:
   - www.ggchk.ga:443@trojan
   - www.tokyo2023.ga:443@trojan
   - www.seetheworldjp.ga:443@trojan
-  - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - www.tokyo2021.ga:443@trojan
+  - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - 35.153.162.49:27080@vmess
   - ssl.tcpbbr.net:443@trojan
   - zgao.shop:443@trojan
